@@ -26,3 +26,4 @@
 -XX:+HeapDumpOnOutOfMemoryError
 -XX:+ExitOnOutOfMemoryError
 -Dpresto-temporarily-allow-java8=true
+-Djdk.attach.allowAttachSelf=true
